Get movie id by cutting with '/' based on new path of movies. Also working with 2027 users - random sample

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ netflix_recommendation_system/test_training_set/
 netflix_recommendation_system/user_ratings_old/
 netflix_recommendation_system/data_preprocessing/unique_user_ids
 netflix_recommendation_system/data_preprocessing/time_information
+netflix_recommendation_system/data_preprocessing/random_sample_users_backup
 
 
 # Papers and Articles
