--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,10 @@
 
 # Dataset files
 netflix_dataset/
-sample_netflix_dataset/
+sample_netflix_dataset/movies1000
+sample_netflix_dataset/movies2000
+sample_netflix_dataset/user_ratings_1000
+sample_netflix_dataset/user_ratings_2000
 netflix_recommendation_system/test_training_set/
 netflix_recommendation_system/user_ratings_old/
 netflix_recommendation_system/data_preprocessing/unique_user_ids
