--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ sample_netflix_dataset/movies2000
 sample_netflix_dataset/user_ratings_1000
 sample_netflix_dataset/user_ratings_2000
 sample_netflix_dataset/user_ratings
+sample_netflix_dataset/test_user_ratings
 netflix_recommendation_system/test_training_set/
 netflix_recommendation_system/user_ratings_old/
 data_processing/data_preprocessing/unique_user_ids
